--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -11,13 +11,23 @@
             </label>
             <div class="advantages__content">
                 <h3 class="advantages__subtitle">Гарантии - 12 месяцев</h3>
-                <p class="advantages__descr">Работа по договору. Все официально. Предоставляем весь пакет бухгалтерских
-                    документов.
-                    2 концепции дизайна. Выполняем работы строго в соответствии с календарным планом
-                    Поэтапная оплата. Оплата за работу делится на части.
-                    Дружим с поисковиками. Делаем сайты, которые нравятся поисковым системам
-                    Соблюдение сроков. Выполняем работы строго в соответствии с договором
-                </p>
+                <ul class="advantages__list">
+                    <li class="advantages__descr">Работа по договору. Все официально. Предоставляем весь пакет бухгалтерских
+                        документов
+                    </li>
+                    <li class="advantages__descr">
+                        2 концепции дизайна. Выполняем работы строго в соответствии с календарным планом
+                    </li>
+                    <li class="advantages__descr">
+                        Поэтапная оплата. Оплата за работу делится на части.
+                    </li>
+                    <li class="advantages__descr">
+                        Дружим с поисковиками. Делаем сайты, которые нравятся поисковым системам
+                    </li>
+                    <li class="advantages__descr">
+                        Соблюдение сроков. Выполняем работы строго в соответствии с договором
+                    </li>
+                </ul>
             </div>
             <input type="radio" class="advantages__input" name="tabs" id="tab-two">
             <label for="tab-two" class="advantages__label advantages__label_two">
