--- a/src/partials/cases.html
+++ b/src/partials/cases.html
@@ -13,12 +13,22 @@
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
-                            <div class="cases__tabs">
+                            <div class="cases__tabs cases__tabs_desktop ">
                                 <button class="cases__btn is-active" data-tab-trigger="1">Воронка</button>
                                 <button class="cases__btn" data-tab-trigger="2">График</button>
                                 <button class="cases__btn" data-tab-trigger="3">Цифры</button>
                             </div>
+                            <div class="cases__tabs cases__tabs_mobile custom-select">
+                                <select>
+                                    <option value="0" class="custom-option" data-tab-trigger="1">Воронка</option>
+                                    <option value="1" class="custom-option" data-tab-trigger="1">Воронка</option>
+                                    <option value="2" class="custom-option" data-tab-trigger="2">График</option>
+                                    <option value="3" class="custom-option" data-tab-trigger="3">Цифры</option>
+                                </select>
+                            </div>
+
                             <div class="cases__content is-open" data-tab-content="1">
+                                <div class="cases__img-ex"></div>
                                 <div class="cases__img"></div>
                                 <ul class="cases__list cases__list_1">
                                     <li class="cases__item">
@@ -68,6 +78,7 @@
                                 <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="2">
+                                <div class="cases__img-ex"></div>
                                 <div class="cases__chart"></div>
                                 <ul class="cases__list cases__list_2">
                                     <li class="cases__item">
@@ -143,6 +154,7 @@
                                 <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="3">
+                                <div class="cases__img-ex"></div>
                                 <ul class="cases__list cases__list_3">
                                     <li class="cases__item problem">
                                         <div class="problem__title problem__title_1">
@@ -234,12 +246,22 @@
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
-                            <div class="cases__tabs">
+                            <div class="cases__tabs cases__tabs_desktop ">
                                 <button class="cases__btn is-active" data-tab-trigger="1">Воронка</button>
                                 <button class="cases__btn" data-tab-trigger="2">График</button>
                                 <button class="cases__btn" data-tab-trigger="3">Цифры</button>
                             </div>
+                            <div class="cases__tabs cases__tabs_mobile custom-select">
+                                <select>
+                                    <option value="0" class="custom-option" data-tab-trigger="1">Воронка</option>
+                                    <option value="1" class="custom-option" data-tab-trigger="1">Воронка</option>
+                                    <option value="2" class="custom-option" data-tab-trigger="2">График</option>
+                                    <option value="3" class="custom-option" data-tab-trigger="3">Цифры</option>
+                                </select>
+                            </div>
+
                             <div class="cases__content is-open" data-tab-content="1">
+                                <div class="cases__img-ex"></div>
                                 <div class="cases__img"></div>
                                 <ul class="cases__list cases__list_1">
                                     <li class="cases__item">
@@ -289,6 +311,7 @@
                                 <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="2">
+                                <div class="cases__img-ex"></div>
                                 <div class="cases__chart"></div>
                                 <ul class="cases__list cases__list_2">
                                     <li class="cases__item">
@@ -364,6 +387,7 @@
                                 <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="3">
+                                <div class="cases__img-ex"></div>
                                 <ul class="cases__list cases__list_3">
                                     <li class="cases__item problem">
                                         <div class="problem__title problem__title_1">
@@ -455,12 +479,22 @@
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
-                            <div class="cases__tabs">
+                            <div class="cases__tabs cases__tabs_desktop ">
                                 <button class="cases__btn is-active" data-tab-trigger="1">Воронка</button>
                                 <button class="cases__btn" data-tab-trigger="2">График</button>
                                 <button class="cases__btn" data-tab-trigger="3">Цифры</button>
                             </div>
+                            <div class="cases__tabs cases__tabs_mobile custom-select">
+                                <select>
+                                    <option value="0" class="custom-option" data-tab-trigger="1">Воронка</option>
+                                    <option value="1" class="custom-option" data-tab-trigger="1">Воронка</option>
+                                    <option value="2" class="custom-option" data-tab-trigger="2">График</option>
+                                    <option value="3" class="custom-option" data-tab-trigger="3">Цифры</option>
+                                </select>
+                            </div>
+
                             <div class="cases__content is-open" data-tab-content="1">
+                                <div class="cases__img-ex"></div>
                                 <div class="cases__img"></div>
                                 <ul class="cases__list cases__list_1">
                                     <li class="cases__item">
@@ -510,6 +544,7 @@
                                 <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="2">
+                                <div class="cases__img-ex"></div>
                                 <div class="cases__chart"></div>
                                 <ul class="cases__list cases__list_2">
                                     <li class="cases__item">
@@ -585,6 +620,7 @@
                                 <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="3">
+                                <div class="cases__img-ex"></div>
                                 <ul class="cases__list cases__list_3">
                                     <li class="cases__item problem">
                                         <div class="problem__title problem__title_1">
@@ -677,6 +713,6 @@
                 <div class="swiper-button-next"></div>
             </div>
         </div>
-        <a href="#" class="cases__btn cases__btn_link btn">Перейти в порфолио</a>
+        <a href="https://vtop3.by/portfolio/razrabotka-sajtov" class="cases__btn cases__btn_link btn">Перейти в порфолио</a>
     </div>
 </section>
