--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -157,12 +157,14 @@
                         <use xlink:href="./images/sprite.svg#phone-icon"></use>
                     </svg>
                     +375 (29) 257-70-07
+                    <span class="header__phone-hover">Показать номер</span>
                 </a>
-                <a class="header__mail header__link" href="mailto:3577007by@gmail.com">
+                <a class="header__mail header__mail_hover header__link" href="mailto:3577007by@gmail.com">
                     <svg class="header__link-img" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                         <use xlink:href="./images/sprite.svg#mail-icon"></use>
                     </svg>
                     3577007by@gmail.com
+                    <span class="header__mail-hover">Показать email</span>
                 </a>
                 <div class="header__lang">
                     <span class="header__lang-name header__link_arrow">RU</span>
