--- a/src/partials/prices.html
+++ b/src/partials/prices.html
@@ -4,7 +4,7 @@
             <h2 class="prices__title title">СКОЛЬКО СТОИТ</h2>
             <h3 class="prices__subtitle">КОНТЕКСТНАЯ РЕКЛАМА В МОСКВЕ</h3>
         </div>
-        <div class="prices__block">
+        <div class="prices__block" data-simplebar>
             <table class="prices__table">
                 <thead class="prices__thead">
                     <tr class="prices__tr" class="prices__tr">
@@ -20,13 +20,13 @@
 
                         </td>
                         <td class="prices__td">
-                            <button class="prices__btn btn">Выбрать пакет</button>
+                            <button class="prices__btn btn btn-show-modal">Выбрать пакет</button>
                         </td>
                         <td class="prices__td prices__line">
-                            <button class="prices__btn btn">Выбрать пакет</button>
+                            <button class="prices__btn btn btn-show-modal">Выбрать пакет</button>
                         </td>
                         <td class="prices__td">
-                            <button class="prices__btn btn">Выбрать пакет</button>
+                            <button class="prices__btn btn btn-show-modal">Выбрать пакет</button>
                         </td>
                     </tr>
                 </tfoot>
