--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -15,22 +15,22 @@
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_1"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_2"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_3"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_4"></div>
                                 </a>
                             </li>
                         </ul>
@@ -49,22 +49,22 @@
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_1"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_2"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_3"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_4"></div>
                                 </a>
                             </li>
                         </ul>
@@ -83,22 +83,22 @@
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_1"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_2"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_3"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="./images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
+                                    <div class="team__img-sert team__img-sert_4"></div>
                                 </a>
                             </li>
                         </ul>
