--- a/src/partials/questions.html
+++ b/src/partials/questions.html
@@ -12,10 +12,10 @@
                 <div class="accordion__panel ac-panel">
                     <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
                         приводит к конкретному результату,
-                        а именно:
+                        а именно:<br>
                         Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта
+                        первоочередная задача <br>
+                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
                         Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
                         для вашего
                         покупателя и важный для принятия решения о покупке (заказе)
@@ -30,10 +30,10 @@
                 <div class="accordion__panel ac-panel">
                     <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
                         приводит к конкретному результату,
-                        а именно:
+                        а именно:<br>
                         Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта
+                        первоочередная задача <br>
+                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
                         Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
                         для вашего
                         покупателя и важный для принятия решения о покупке (заказе)
@@ -47,10 +47,10 @@
                 <div class="accordion__panel ac-panel">
                     <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
                         приводит к конкретному результату,
-                        а именно:
+                        а именно:<br>
                         Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта
+                        первоочередная задача <br>
+                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
                         Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
                         для вашего
                         покупателя и важный для принятия решения о покупке (заказе)
@@ -65,10 +65,10 @@
                 <div class="accordion__panel ac-panel">
                     <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
                         приводит к конкретному результату,
-                        а именно:
+                        а именно:<br>
                         Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта
+                        первоочередная задача <br>
+                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
                         Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
                         для вашего
                         покупателя и важный для принятия решения о покупке (заказе)
@@ -82,10 +82,10 @@
                 <div class="accordion__panel ac-panel">
                     <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
                         приводит к конкретному результату,
-                        а именно:
+                        а именно:<br>
                         Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта
+                        первоочередная задача <br>
+                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
                         Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
                         для вашего
                         покупателя и важный для принятия решения о покупке (заказе)
