--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -16,7 +16,8 @@
     display: flex;
     flex-direction: column;
     width: auto;
-    margin: 10px;
+    margin: 12px;
+    top: 10%;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid rgb(0 0 0 / 20%);
@@ -25,10 +26,11 @@
     transition: opacity 0.3s ease-in;
   }
   
+  
   @media (min-width: 320px) {
     .itc-modal-content {
       max-width: 500px;
-      margin: 50px auto;
+      margin: auto auto;
       border-radius: 20px;
     }
   }
